<resources>
    <string name="app_name">RealMall</string>
    <string name="home">首页</string>
    <string name="hot">热卖</string>
    <string name="category">分类</string>
    <string name="cart">购物车</string>
    <string name="mine">我的</string>
    <string name="__leak_canary_display_activity_label">RealMallLC</string>
    <string name="edit">编辑</string>
    <string name="buynow">立即购买</string>
    <string name="rmb">¥ %1$s</string>
    <string name="pointtwo">%.2f</string>
    <string name="sub">-</string>
    <string name="add">+</string>
    <string name="select_all">全选</string>
    <string name="total">合计 ¥</string>
    <string name="go_pay">去结算</string>
    <string name="complete">完成</string>
    <string name="delete">删除</string>
    <string name="favorite">收藏</string>
    <string name="wares_detail">商品详情</string>
    <string name="enter_search">请输入搜索内容</string>
    <string name="sign_up_1"><![CDATA[用户注册(&#189;)]]></string>
    <string name="sign_up_2">用户注册(2/2)</string>
    <string name="country">国家或地区</string>
    <string name="china">中国</string>
    <string name="_86">+86</string>
    <string name="input_number">请输入手机号码</string>
    <string name="password">密码</string>
    <string name="input_password">请输入密码</string>
    <string name="user_agreement">点击 下一步 按钮，表示同意 《RealMall 用户协议》</string>
    <string name="token_error">Token 失效</string>
    <string name="sign_in">登录</string>
    <string name="forgot_pwd">忘记密码</string>
    <string name="click_login">点击登录</string>
    <string name="sign_out">退出登录</string>
    <string name="fill_order">填写订单</string>
    <string name="order_wares">商品列表</string>
    <string name="pay_way">支付方式</string>
    <string name="alipay">支付宝</string>
    <string name="support_alipay">支持有支付宝，网银用户使用</string>
    <string name="wx_pay">微信支付</string>
    <string name="support_wx_pay">用微信支付，安全便捷</string>
    <string name="bd_pay">百度钱包</string>
    <string name="support_bd_pay">百度安全支付服务</string>
    <string name="submit_order">提交订单</string>
    <string name="input_code">请输入验证码</string>
    <string name="my_orders">我的订单</string>
    <string name="my_favorite">我的收藏</string>
    <string name="my_address">收货地址</string>
    <string name="recipient">收件人</string>
    <string name="address">联系地址</string>
    <string name="detail_address">详细地址</string>
    <string name="set_default">设为默认</string>
    <string name="pay_result">支付结果</string>
    <string name="back_main">返回首页</string>
    <string name="order_list">我的订单</string>
    <string name="look_like">找相似</string>
    <string name="share_order">评价晒单</string>
</resources>
