<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:toolbar="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp"
        android:orientation="vertical">

        <com.renxl.realmall.widget.ToolBar
            android:id="@+id/cart_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/colorPrimaryDark"
            toolbar:right_text="@string/edit"
            toolbar:title_text="@string/cart" />


        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview_cart_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/md_teal_200"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkbox_cart_select_alll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/select_all"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_cart_total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textColor="@color/white"
            android:text="@string/total"
            android:textSize="@dimen/largeTextSize" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_cart_pay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_margin="5dp"
                android:background="@drawable/selector_red_btn"
                android:text="@string/go_pay"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_cart_del"
                style="@style/btn_submit"
                android:text="@string/delete"
                android:visibility="gone" />
        </RelativeLayout>


    </LinearLayout>
</RelativeLayout>