<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_grey_100"
    android:orientation="vertical">

    <com.renxl.realmall.widget.ToolBar
        android:id="@+id/toolbar_sign_up_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:minHeight="?attr/actionBarSize"
        app:navigationIcon="@drawable/icon_back"
        app:right_text="下一步"
        app:title_text="@string/sign_up_1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="5dp">

            <TextView
                style="@style/sign_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/normalMarginSize"
                android:text="@string/country" />

            <TextView
                android:id="@+id/tv_country"
                style="@style/sign_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="@dimen/normalMarginSize"
                tools:ignore="RelativeOverlap" />

        </RelativeLayout>

        <View
            style="@style/divider"
            android:layout_width="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/tv_code"
                style="@style/sign_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:background="@color/white"
                android:hint="@string/input_number"
                android:inputType="phone"
                android:minLines="1"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textSize="@dimen/smallTextSize" />

        </LinearLayout>

        <View
            style="@style/divider"
            android:layout_width="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:padding="5dp">

            <TextView
                style="@style/sign_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:background="@color/white"
                android:hint="@string/input_password"
                android:inputType="textPassword"
                android:minLines="1"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textSize="@dimen/smallTextSize" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/user_agreement"
        android:textSize="@dimen/smallestTextSize" />

    <Button
        android:id="@+id/btn_regist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Regist" />


</LinearLayout>