<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_grey_200"
    android:orientation="vertical">

    <com.renxl.realmall.widget.ToolBar
        android:id="@+id/toolbar_sign_up_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:minHeight="?attr/actionBarSize"
        app:navigationIcon="@drawable/icon_back"
        app:right_text="@string/complete"
        app:title_text="@string/sign_up_2" />

    <TextView
        android:id="@+id/tv_sign_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="40dp"
        tools:text="我们已发送验证码" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <EditText
                android:id="@+id/et_sign_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/input_code"
                android:inputType="number"
                android:textSize="@dimen/normalTextSize" />

            <Button
                android:id="@+id/btn_sign_resend"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="10dp"
                android:background="@drawable/selector_btn_green"
                android:padding="5dp"
                android:textColor="@color/white"
                tools:text="52 秒后可重新发送" />
        </LinearLayout>

        <View
            style="@style/divider_margin10"
            android:layout_marginBottom="15dp" />
    </LinearLayout>
</LinearLayout>