<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:padding="5dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_address_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            tools:text="Ren"/>

        <TextView
            android:id="@+id/tv_address_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            tools:text="15632279666"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_address_item_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        tools:text="北京市海淀区北京大学"/>

    <View style="@style/divider_margin10"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <RadioButton
            android:id="@+id/radio_address_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_btn_pay_way"
            android:button="@null"/>

        <TextView
            android:id="@+id/tv_status_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:text="@string/set_default"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/tv_address_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:drawableLeft="@drawable/icon_edit_32"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:text="@string/edit"/>

        <TextView
            android:id="@+id/tv_address_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="5dp"
            android:drawableLeft="@drawable/icon_trash_32"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:text="@string/delete"/>
    </LinearLayout>


</LinearLayout>