<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    custom:cardCornerRadius="@dimen/buttonCornerSize"
    custom:contentPadding="@dimen/normalPaddingSize">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/sdv_hot_list_icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_vertical" />

        <TextView
            android:id="@+id/tv_hot_list_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_toEndOf="@+id/sdv_hot_list_icon"
            android:layout_toRightOf="@+id/sdv_hot_list_icon"
            android:textSize="@dimen/smallTextSize" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/tv_hot_list_name"
            android:layout_alignParentRight="true"
            android:layout_marginTop="17dp"
            android:layout_toRightOf="@+id/sdv_hot_list_icon">

            <TextView
                android:id="@+id/tv_hot_list_price"
                style="@style/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:layout_toLeftOf="@+id/btn_hot_list_add" />

            <Button
                android:id="@+id/btn_hot_list_add"
                style="@style/bigButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@drawable/selector_red_btn"
                android:maxLines="1"
                android:minHeight="@dimen/largeButtonMinHeight"
                android:text="@string/buynow"/>

            <TextView
                android:id="@+id/tv_favorite_list_look"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@color/colorPrimaryDark"
                android:padding="5dp"
                android:text="@string/look_like"
                android:textColor="@color/white"
                android:textSize="@dimen/smallerTextSize"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/tv_favorite_list_del"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:layout_margin="10dp"
                android:layout_toLeftOf="@+id/tv_favorite_list_look"
                android:background="@drawable/bg_favorite_del"
                android:padding="5dp"
                android:text="@string/delete"
                android:textColor="@color/md_grey_700"
                android:textSize="@dimen/smallerTextSize"
                android:visibility="gone"/>

        </RelativeLayout>
    </RelativeLayout>

</android.support.v7.widget.CardView>